@@ -19,9 +19,14 @@ override_dh_auto_configure:
 
 override_dh_auto_build:
 	dh_auto_build --builddirectory debian/normal-build
-	cd debian/normal-build && doxygen Doxyfile
 	$(MAKE) -C debian/xzdec-build/src/liblzma
 	$(MAKE) -C debian/xzdec-build/src/xzdec
+	: 'Work around bug #478524'
+	set -e; if type doxygen >/dev/null 2>/dev/null; \
+	then \
+		cd debian/normal-build; \
+		doxygen Doxyfile; \
+	fi
 
 override_dh_auto_test:
 	$(MAKE) -C debian/normal-build check
